--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -10,6 +10,12 @@ repositories {
     mavenCentral()
 }
 
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(17)
+    }
+}
+
 publishing {
     publications {
         mavenJava(MavenPublication) {
